
[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [
    "ZhenYi <434836402@qq.com>",
    "Touyoutaaa <1849625991@qq.com>"
]
license = "MIT"
repository = "https://github.com/GitDataAi/nfs"
description = "Cargo"
keywords = ["Cargo", "Rust", "Cargo-Rust"]
readme = "README.md"
homepage = "https://github.com/GitDataAi"
documentation = "https://github.com/GitDataAi"
publish = false


[workspace]
members = [
    "nfs_serve",
    "nfs_client"
]
resolver = "3"

[workspace.dependencies]
tokio = "1"
serde = "1"
async-trait = "0.1.88"
lazy_static = "1.5.0"
uuid = "1.17.0"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.98"
dashmap = "7.0.0-rc2"
num-traits = "0.2.19"
num-derive = "0.4.2"
filetime = "0.2.25"
byteorder = "1.5.0"